--- a/css/style.css
+++ b/css/style.css
@@ -112,6 +112,37 @@
 }
 
 /*****************************/
+/* FEATURED IN SECTION */
+/*****************************/
+
+.section-featured {
+  padding: 4.8rem 0 3.2rem;
+}
+
+.logos {
+  display: flex;
+  justify-content: space-around;
+}
+.logos img {
+  height: 3.2rem;
+  -webkit-filter: brightness(0);
+  filter: brightness(0);
+  opacity: 50%;
+
+  /* width: 4rem; */
+}
+
+.heading-featured-in {
+  font-size: 1.4rem;
+  text-transform: uppercase;
+  letter-spacing: 0.75;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 2.4rem;
+  color: #888;
+}
+
+/*****************************/
 /* HOW IT WORKS */
 /*****************************/
 .section-how {
@@ -141,11 +172,66 @@
   display: flex;
   align-items: center;
   justify-content: center;
+
+  position: relative;
 }
-.step-img-box::before {
+.step-img-box::before,
+.step-img-box::after {
   content: "";
   display: block;
+
+  border-radius: 60%;
+
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+.step-img-box::before {
   width: 60%;
-  height: 60%;
+  /* height: 60%; */
+
+  /* 60% of parent width */
+  padding-bottom: 60%;
   background-color: #fdf2e9;
+
+  z-index: -2;
+}
+
+.step-img-box::after {
+  width: 45%;
+  /* height: 50%; */
+
+  /* 60% of parent width */
+  padding-bottom: 45%;
+  background-color: #fae5d3;
+  z-index: -1;
+}
+
+/*****************************/
+/* ,MEALS SECTION */
+/*****************************/
+.section-meals {
+  padding: 9.6rem 0;
+  /* background-color: orangered; */
+}
+.meal-title {
+  font-size: 2rem;
+  color: #333;
+  font-weight: 600;
+  margin-bottom: 3.2rem;
+}
+
+.meal-attributes {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+.meal-attribute {
+  font-size: 1.8rem;
+}
+
+.meal-img {
+  width: 100%;
 }
