--- a/css/general.css
+++ b/css/general.css
@@ -80,6 +80,15 @@ body {
   row-gap: 9.6rem;
   -moz-column-gap: 6.4rem;
   column-gap: 6.4rem;
+  /* margin-bottom: 9.6rem; */
+}
+
+/* .grid:last-child {
+  margin-bottom: 0;
+} */
+
+.grid:not(:last-child) {
+  margin-bottom: 9.6rem;
 }
 
 .grid--2-cols {
@@ -183,6 +192,24 @@ body {
   border-bottom: 1px solid transparent;
 }
 
+.list {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1.6rem;
+}
+.list-item {
+  font-size: 1.8rem;
+  display: flex;
+  align-items: center;
+  gap: 1.6rem;
+}
+.list-icon {
+  width: 3rem;
+  height: 3rem;
+  color: #e67e22;
+}
+
 /* HELPER/SETTING CLASSES */
 .margin-right-sm {
   margin-right: 1.6rem !important;
@@ -195,6 +222,7 @@ body {
 .center-text {
   text-align: center;
 }
+
 strong {
   font-weight: 500;
 }
