--- a/css/style.css
+++ b/css/style.css
@@ -468,7 +468,7 @@
 /*****************************/
 
 .section-cta {
-  padding: 9.6rem 0;
+  padding: 4.8rem 0 12.8rem;
 }
 
 .cta {
@@ -483,7 +483,7 @@
   background-image: linear-gradient(to right bottom, #eb984e, #e67e22);
   overflow: hidden;
   /* temp */
-  height: 50rem;
+  /* height: 50rem; */
 }
 
 .cta-text-box {
@@ -499,7 +499,8 @@
 
 .cta .heading-secondary {
   margin-bottom: 3.2rem;
-  color: #45260a;
+  /* color: #45260a; */
+  color: inherit;
 }
 .cta-img-box {
   background-image: linear-gradient(
@@ -526,12 +527,119 @@
   font-weight: 500;
   margin-bottom: 1.2rem;
 }
-.cta-form input {
+.cta-form input,
+.cta-form select {
   width: 100%;
   padding: 1.2rem;
   font-size: 1.8rem;
+  font-family: inherit;
+  color: inherit;
+  border: none;
+  background-color: #fdf2e9;
+  border-radius: 9px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
 }
-.cta-form select {
+
+.cta-form input::-webkit-input-placeholder {
+  color: #aaa;
 }
-.cta-form button {
+
+.cta-form input::-moz-placeholder {
+  color: #aaa;
+}
+
+.cta-form input:-ms-input-placeholder {
+  color: #aaa;
+}
+
+.cta-form input::-ms-input-placeholder {
+  color: #aaa;
+}
+
+.cta-form input::placeholder {
+  color: #aaa;
+}
+.cta *:focus {
+  outline: none;
+  /* outline: 4px dotted #fdf2e9;
+  outline-offset: 8px; */
+  box-shadow: 0 0 0 0.8rem rgba(253, 242, 233, 0.5);
+}
+
+/*****************************/
+/* FOOTER */
+/*****************************/
+
+.footer {
+  padding: 12.8rem 0;
+  border-top: 1px solid #eee;
+}
+
+.grid-footer {
+  grid-template-columns: 1.5fr 1.5fr 1fr 1fr 1fr;
+}
+
+.logo-col {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer-logo {
+  display: block;
+  margin-bottom: 3.2rem;
+}
+.social-links {
+  list-style: none;
+  display: flex;
+  gap: 2.4rem;
+}
+
+.social-icons {
+  width: 2.4rem;
+  height: 2.4rem;
+}
+
+.copyright {
+  font-size: 1.4rem;
+  color: #767676;
+  line-height: 1.6;
+
+  margin-top: auto;
+}
+
+.footer-heading {
+  font-size: 1.8rem;
+  font-weight: 500;
+  margin-bottom: 4rem;
+}
+
+.contacts {
+  font-style: normal;
+  line-height: 1.6;
+  font-size: 1.6rem;
+}
+
+.address {
+  margin-bottom: 2.4rem;
+}
+
+.footer-nav {
+  list-style: none;
+
+  display: flex;
+  flex-direction: column;
+  gap: 2.4rem;
+}
+
+.footer-link:link,
+.footer-link:visited {
+  text-decoration: none;
+  font-size: 1.6rem;
+  color: #767676;
+  transition: all 0.3s;
+}
+
+.footer-link:hover,
+.footer-link:active {
+  color: #555;
 }
