--- a/css/queries.css
+++ b/css/queries.css
@@ -103,6 +103,71 @@
   .cta-form {
     grid-template-columns: 1fr;
   }
-}
+  .btn--form {
+    margin-top: 1.2rem;
+  }
 
-/* Mobile navigation */
+  /* MOBILE NAVIGATION */
+
+  .btn-mobile-nav {
+    display: block;
+  }
+
+  /* .header {
+    position: relative;
+  } */
+
+  .main-nav {
+    background-color: rgba(255, 255, 255, 0.981);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+
+    transform: translateX(100%);
+
+    display: flex;
+    /* flex-direction: column; */
+    justify-content: center;
+    align-items: center;
+    transition: all 0.5s ease-in;
+
+    /* Hide Nav */
+    /* Allows No transitions at all */
+    /* display: none; */
+
+    /* 01) Hide it visually */
+    opacity: 0;
+
+    /* 02) Make it unaccessable to mouse and keyboard */
+    pointer-events: none;
+
+    /* 03) Hide it from screen readers */
+    visibility: hidden;
+  }
+
+  .nav-open .main-nav {
+    opacity: 1;
+    pointer-events: auto;
+    visibility: visible;
+
+    transform: translateX(0%);
+  }
+
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
+    display: none;
+  }
+  .nav-open .icon-mobile-nav[name="close-outline"] {
+    display: block;
+  }
+
+  .main-nav-list {
+    flex-direction: column;
+    gap: 4.8rem;
+  }
+  .main-nav-link:link,
+  .main-nav-link:visited {
+    font-size: 3rem;
+  }
+}
