added smooth scrolling and sticky navigation bar

--- a/css/general.css
+++ b/css/general.css
@@ -59,7 +59,8 @@ html {
   font-size: 62.5%;
   overflow-x: hidden;
 
-  scroll-behavior: smooth;
+  /* Does not work on safari  */
+  /* scroll-behavior: smooth; */
 }
 
 body {
